# threnody

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTRUCTIONS.md  KNOWN_BOTTLENECKS.md  NOTICE  PROVIDER_QUOTAS.md  README.md  SECURITY.md  config.example.yaml  copilot-instructions.md  install.sh  mcp_server.py  pyproject.toml  server.json  smithery.yaml  threnody.manifest.json  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  copilot-instructions.md
.planning/: STATE.md
blackbox/: __init__.py  providers.py
claude-code/: __init__.py  entry.py  providers.py  providers_legacy.py
cli/: audit.py  eval.py  gain.py  inspect.py  policy.py  trace.py
codex/: __init__.py  entry.py  providers.py
copilot/: __init__.py  entry.py  providers.py
cursor/: __init__.py  entry.py  providers.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  CLI.md  COMPETITIVE.md  COST_SAVINGS.md  DEMO.md  HOOKS.md  LEGAL.md  MCP_TOOLS.md  MODEL_DISCOVERY.md  PLUGIN_INSTALL.md  PROVIDER_COMPATIBILITY.md  RELEASE_LIMITATIONS.md  ROUTING_EVAL.md  ROUTING_QUALITY.md  RUFLO_HEAD_TO_HEAD.md  TROUBLESHOOTING.md  install-audit.md  install-plugin-mode-spec.md  marketplace-research.md  mcp-first-run-spec.md  packaging-spec.md  plugin-design.md
gemini/: __init__.py  entry.py  providers.py
junie/: __init__.py  entry.py  providers.py
mistral/: __init__.py  providers.py
opencode/: entry.py  providers.py
scripts/: build-manifests.py  check_release_archive.py  publish_eval.sh
shared/: __init__.py  agent_export.py  agent_optimizer.py  agents.py  catalog_refresh.py  claude_compat.py  config.py  consensus.py  context.py  db.py  db_cli.py  discovery.py  doctor.py  env.py  eval.py  eval_baseline.py  heuristic_plan.py  host_learning.py  host_spawn.py  instructions.py  learning_hook.py  memory.py  model_registry.py  orchestrator.py  outcomes.py  planner.py  project_profile.py  provider_factory.py  quota.py  receipts.py  remote_client.py  remote_server.py  resilience.py  review_fanout.py  review_learning.py  router.py  routing_eval.py  run_log.py  settings_wizard.py  snapshot.py  (+9 more)
shell/: ghc.sh  switchyard-watch  threnody  threnody-learning-hook.sh  threnody-watch
tests/: __init__.py  conftest.py  test_adaptive.py  test_agent_export.py  test_agent_pattern_tracking.py  test_agents.py  test_audit_chain.py  test_caller_allowlists.py  test_circuit_breaker.py  test_clean_install.py  test_codex_runtime.py  test_config.py  test_consensus_host_native.py  test_context.py  test_db.py  test_db_concurrency.py  test_delegation_utilities.py  test_discovery.py  test_doctor.py  test_effort.py  test_entrypoints.py  test_eval.py  test_eval_swarm_fixtures.py  test_eval_warmpath.py  test_execute_subtask_cascade.py  test_heuristic_plan.py  test_host_batch_reporting.py  test_host_learning.py  test_host_spawn.py  test_idempotency.py  test_installer.py  test_instructions.py  test_learning_hook.py  test_learning_inspect_wave3.py  test_manifests.py  test_mcp_execute_swarm.py  (+45 more)
(+49 files in other folders)
